--- a/javaScript/3_functions/1.md
+++ b/javaScript/3_functions/1.md
@@ -1,3 +1,5 @@
+<div style="text-align: justify">
+
 # 1. Working with Functions
 
 ## 1.1. What is the purpose of functions and how do they work?
@@ -214,3 +216,5 @@ Scope in programming refers to the visibility and accessibility of variables in 
     In this example, `blockVar` is only accessible within the `if` block. Trying to access it outside the block will result in an error. Understanding these different types of scope is essential for managing variable accessibility and avoiding unintended side effects in your code.
 
 Global variables should be used sparingly, as they can lead to naming conflicts and make your code harder to maintain. Local variables help to keep different parts of your code isolated, which is especially useful in larger programs. Block scoping with `let` and `const` provides even finer control over variable accessibility, helping to prevent errors and make your code more predictable. Mastering these basic concepts of global, local, and block scope will provide a solid foundation for understanding more advanced topics.
+
+</div>
