--- a/javaScript/3_functions/2.md
+++ b/javaScript/3_functions/2.md
@@ -1,3 +1,5 @@
+<div style="text-align: justify">
+
 # Examples
 
 ## 1. A Calculator
@@ -155,3 +157,5 @@ let year = 2000;
 const result = isLeapYear(year);
 console.log(result)
 ```
+
+</div>
