--- a/javaScript/4_functions/3.md
+++ b/javaScript/4_functions/3.md
@@ -2,6 +2,7 @@
 
 # Examples
 
+## 1. A Shopping List
 
 ```js
 function getShoppingListMsg(arr) {
@@ -53,5 +54,142 @@ It might be nice to get a dessert.
 Current Shopping List: Chocolate Cake,Vegetable Oil,Apples,Grapes,Popcorn,Beef Jerky
 On second thought, maybe we should be more health conscious.
 Current Shopping List: Canola Oil,Apples,Grapes,Popcorn,Beef Jerky
+```
+
+## 2. A Lunch Picker Program
+
+```js
+// === Lunch Menu Functions ===
+
+const addLunchToEnd = (array, string) => {
+  array.push(string);
+  console.log(`${string} added to the end of the lunch menu.`);
+  return array;
+};
+
+const addLunchToStart = (array, string) => {
+  array.unshift(string);
+  console.log(`${string} added to the start of the lunch menu.`);
+  return array;
+};
+
+const removeLastLunch = array => {
+  const string = array.pop();
+
+  if (string) {
+    console.log(`${string} removed from the end of the lunch menu.`);
+  } else {
+    console.log(`No lunches to remove.`);
+  }
+
+  return array;
+};
+
+const removeFirstLunch = (array) => {
+  const string = array.shift();
+
+  if (string) {
+    console.log(`${string} removed from the start of the lunch menu.`);
+  } else {
+    console.log(`No lunches to remove.`);
+  }
+
+  return array;
+};
+
+const getRandomLunch = array => {
+  if (array.length > 0) {
+    const index = Math.floor(Math.random() * array.length);
+    console.log("Randomly selected lunch: " + array[index]);
+  } else {
+    console.log("No lunches available.");
+  }
+};
+
+const showLunchMenu = array => {
+  if (array.length > 0) {
+    console.log(`Menu items: ${array.join(', ')}`);
+  } else {
+    console.log("The menu is empty.");
+  }
+};
+
+// === Demo Starts ===
+const lunches = [];
+
+console.log("\n=== Adding Lunches ===");
+addLunchToEnd(lunches, "pizza");
+addLunchToEnd(lunches, "bacon");
+addLunchToEnd(lunches, "sushi");
+
+addLunchToStart(lunches, "tacos");
+addLunchToStart(lunches, "salad");
+
+console.log("\n=== Show Current Menu ===");
+showLunchMenu(lunches);
+
+console.log("\n=== Removing Lunches ===");
+removeLastLunch(lunches);     // Removes "sushi"
+removeFirstLunch(lunches);    // Removes "salad"
+
+console.log("\n=== Random Lunch Selection ===");
+getRandomLunch(lunches);
+
+console.log("\n=== More Adds and Removes ===");
+addLunchToEnd(lunches, "noodles");
+addLunchToStart(lunches, "sandwich");
+
+removeLastLunch(lunches);     // Removes "noodles"
+removeFirstLunch(lunches);    // Removes "sandwich"
+removeFirstLunch(lunches);    // Next item
+removeLastLunch(lunches);     // Another item
+
+console.log("\n=== Show Updated Menu ===");
+showLunchMenu(lunches);
+
+console.log("\n=== Empty Menu Behavior ===");
+const emptyMenu = [];
+
+showLunchMenu(emptyMenu);
+removeFirstLunch(emptyMenu);
+removeLastLunch(emptyMenu);
+getRandomLunch(emptyMenu);
+```
+
+console:
+```none
+=== Adding Lunches ===
+pizza added to the end of the lunch menu.
+bacon added to the end of the lunch menu.
+sushi added to the end of the lunch menu.
+tacos added to the start of the lunch menu.
+salad added to the start of the lunch menu.
+
+=== Show Current Menu ===
+Menu items: salad, tacos, pizza, bacon, sushi
+
+=== Removing Lunches ===
+sushi removed from the end of the lunch menu.
+salad removed from the start of the lunch menu.
+
+=== Random Lunch Selection ===
+Randomly selected lunch: tacos
+
+=== More Adds and Removes ===
+noodles added to the end of the lunch menu.
+sandwich added to the start of the lunch menu.
+noodles removed from the end of the lunch menu.
+sandwich removed from the start of the lunch menu.
+tacos removed from the start of the lunch menu.
+bacon removed from the end of the lunch menu.
+
+=== Show Updated Menu ===
+Menu items: pizza
+
+=== Empty Menu Behavior ===
+The menu is empty.
+No lunches to remove.
+No lunches to remove.
+No lunches available.
 ```
 </div>
