--- a/css/4_pseudo_classes_n_elements/2.md
+++ b/css/4_pseudo_classes_n_elements/2.md
@@ -2,8 +2,229 @@
 
 # Examples
 
+## 1. A Birthday Card
+
+html:
+```html
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Greeting Card</title>
+    <link href="styles.css" rel="stylesheet">
+  </head>
+  <body>
+    <div class="card" id="greeting-card">
+      <h1>Happy Birthday!</h1>
+
+      <p class="message">
+        Wishing you all the happiness and joy on your special day!
+      </p>
+
+      <div class="card-links">
+        <a href="#send" class="send-link">Send Card</a>
+        <a href="#share" class="share-link">Share on Social Media</a>
+      </div>
+  	</div>
+
+  <section id="send">
+    <h2>Sending your card...</h2>
+    <p>Card successfully sent to your recipient!</p>
+  </section>
+
+  <section id="share">
+    <h2>Sharing your card...</h2>
+    <p>Your card was shared on social media!</p>
+  </section>
+
+  </body>
+</html>
+```
+
+styles.css:
+```css
+body {
+  font-family: Arial, sans-serif;
+  padding: 40px;
+  text-align: center;
+  background-color: brown;
+}
+
+.card {
+  background-color: white;
+  max-width: 400px;
+  padding: 40px;
+  margin: 0 auto;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px gray;
+  transition: transform 0.3s, background-color 0.3s ease
+}
+
+.card:hover {
+  background-color: khaki;
+  transform: scale(1.1);
+}
+
+h1::before {
+  content: "🥳 ";
+}
+
+h1::after {
+  content: " 🥳";
+}
+
+.message {
+  font-size: 1.2em;
+  color: gray;
+  margin-bottom: 20px;
+}
+
+.card-links {
+  margin-top: 20px;
+  display: flex;
+  justify-content: space-around;
+}
+
+.card-links a {
+  text-decoration: none;
+  font-size: 1em;
+  padding: 10px 20px;
+  border-radius: 5px;
+  color: white;
+  background-color: midnightblue;
+  transition: background-color 0.3s ease;
+}
+
+.card-links a:hover {
+  background-color: orangered;
+}
+
+.card-links a:active {
+  background-color: midnightblue;
+}
+
+.card-links a:focus {
+  outline: 2px solid yellow;
+}
+
+.card-links a:visited {
+  color: crimson;
+}
 
 
+section {
+  margin: 20px auto;
+  max-width: 600px;
+  background-color: whitesmoke;
+  padding: 20px;
+  border-radius: 10px;
+  display: none;
+}
 
+section:target {
+  display: block;
+}
 
+section:hover{
+  transform: skewX(10deg);
+}
+```
+
+## 2. Falta
+
+```html
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Job Application Form</title>
+    <link href="styles.css" rel="stylesheet">
+
+</head>
+
+<body>
+    <div class="container">
+        <form>
+            <label id="nombre">Full name:</label>
+            <input type="text" id="name">
+            <label id="email">Contact email:</label>
+            <input type="email" id="email">
+            <label id="pos">Position:</label>
+            <select id="position">
+                <option>CEO</option>
+                <option>Manager</option>
+                <option>Senior</option>
+                <option>Junior</option>
+            </select>
+
+            <fieldset class="radio-group">
+                <input id="full-option" type="radio" name="availability" />
+                <label for="yes-option">Full-time</label>
+                <input id="part-option" type="radio" name="availability" />
+                <label for="no-option">Part-time</label>
+            </fieldset>
+
+            <textarea id="message"></textarea>
+
+            <button type="submit">Submit</button>
+        </form>
+    </div>
+</body>
+
+</html>
+```
+
+```css
+.container {
+  width: 80vw;
+  margin: 10px auto;
+  padding: 40px;
+  box-shadow: 1px 4px grey;
+}
+
+#nombre, #email, #pos {
+  font-size: 16px;
+  font-weight: bold;
+  display: block;
+  margin: 10px 0px;
+}
+
+form > input, select {
+  width: 100%;
+  margin-bottom: 1px;
+}
+
+input:focus, textarea:focus {
+  border: 1px solid yellow;
+}
+
+input:invalid, select:invalid, textarea:invalid {
+  border-color: red;
+}
+
+input:valid, select:valid, textarea:valid {
+  border-color: green;
+}
+
+button:hover {
+  background-color: blue;
+}
+
+.radio-group input[type="radio"]:checked {
+  border-color: green;
+  background-color: lightgreen;
+  box-shadow: 1px 4px grey;
+}
+
+input[type="radio"]:checked + label {
+  color: green;
+}
+
+input:first-of-type {
+  border-radius: 10px;
+}
+```
 </div>
