--- a/css/4_pseudo_classes_n_elements/2.md
+++ b/css/4_pseudo_classes_n_elements/2.md
@@ -162,9 +162,9 @@ section:hover{
 
             <fieldset class="radio-group">
                 <input id="full-option" type="radio" name="availability" />
-                <label for="yes-option">Full-time</label>
+                <label for="full-option">Full-time</label>
                 <input id="part-option" type="radio" name="availability" />
-                <label for="no-option">Part-time</label>
+                <label for="part-option">Part-time</label>
             </fieldset>
 
             <textarea id="message"></textarea>
