--- a/css/5_colors/2.md
+++ b/css/5_colors/2.md
@@ -82,4 +82,60 @@ h1 {
 ```
 
 
+## 2. A Set of Colored Boxes
+
+index.html:
+```html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Colored Boxes</title>
+    <link href="styles.css" rel="stylesheet">
+</head>
+<body>
+    <h1>Colored Boxes</h1>
+    <div class="color-grid">
+        <div class="color-box color1"></div>
+        <div class="color-box color2"></div>
+        <div class="color-box color3"></div>
+        <div class="color-box color4"></div>
+        <div class="color-box color5"></div>
+    </div>
+</body>
+</html>
+```
+
+styles.csss:
+```css
+body { background-color: #f4f4f4; }
+
+h1 {
+  font-family: arial;
+  text-align: center;
+}
+
+.color-grid { display: flex; }
+
+.color-box {
+  height: 15vw;
+  width: 15vw;
+  min-height: 80px;
+  min-width: 80px;
+  border-radius: 15px;
+  margin: auto;
+}
+
+.color1 { background-color: #FFF000; }
+
+.color2 { background-color: rgb(127, 127, 255); }
+
+.color3 { background-color: tomato; }
+
+.color4 { background-color: hsl(90, 50%, 50%); }
+
+.color5 { background-color: red; }
+```
+
 </div>
