--- a/javaScript/7_fundamentals/4.md
+++ b/javaScript/7_fundamentals/4.md
@@ -2,33 +2,191 @@
 
 # Examples
 
-## 1.
+## 1. A Pyramid Generator
 
-index.html: 
+We want to generate a pyramid that can be either standing upright or upside down.
 
-```html
+Below is a simpler but more verbose version of the code:
+
+```js
+const pyramid = (string, int, bool) => {
+
+  const fillPyramid = (space, notSpace, string) => {
+    pyramidArray.push(["\n"].join(""));
+    pyramidArray.push(Array(space).fill(" ").join(""));
+    pyramidArray.push(Array(notSpace*2+1).fill(string).join(""));
+  }
+
+  const standingPyramid = (string, int) => {
+    for (let i=1; i<=int; i++) {
+      let space = int - i;
+      let notSpace = i - 1;
+      fillPyramid(space, notSpace, string);
+    }
+    pyramidArray.push(["\n"].join(""));
+    return pyramidArray.join("");
+  }
+
+  const upsideDownPyramid = (string, int) => {
+    for (let i=1; i<=int; i++) {
+      let notSpace = int - i;
+      let space = i - 1;
+      fillPyramid(space, notSpace, string);
+    }
+    pyramidArray.push(["\n"].join(""));
+    return pyramidArray.join("");
+  }
+
+  let pyramidArray = [];
+  if (!bool) { return standingPyramid(string, int); };
+  return upsideDownPyramid(string, int);
+}
+
+console.log(pyramid("o", 4, false));
+console.log(pyramid("o", 4, true));
+```
+
+Here is a more compact and efficient version of the same functionality:
+
+```js
+const pyramid = (char, height, upsideDown) => {
+  const lines = [];
+
+  for (let i = 1; i <= height; i++) {
+    const level = upsideDown ? height - i + 1 : i;
+    const spaces = " ".repeat(height - level);
+    const chars = char.repeat(level * 2 - 1);
+    lines.push(spaces + chars);
+  }
+
+  return lines.join("\n") + "\n";
+};
+
+console.log(pyramid("o", 4, false));
+console.log(pyramid("o", 4, true));
+```
+
+Both versions produce the same output:
+
+```none
+   o
+  ooo
+ ooooo
+ooooooo
+
+ooooooo
+ ooooo
+  ooo
+   o
 
 ```
 
-styles.css: 
+## 2. A Gradebook App
 
-```css
+script.js: 
+
+```js
+const getAverage = array => {
+  const sum = array.reduce((accumulator, currentValue) => accumulator + currentValue, 0);
+  return sum / array.length;
+}
+
+const getGrade = score => {
+  if (score == 100) { return "A+"; }
+  else if (score < 100 && score >= 90) { return "A"; }
+  else if (score < 90 && score >= 80) { return "B"; }
+  else if (score < 80 && score >= 70) { return "C"; }
+  else if (score < 70 && score >= 60) { return "D"; }
+  else { return "F"; }
+}
+
+const hasPassingGrade = score => {
+  if (getGrade(score) == "F" ) { return false; }
+  return true;
+}
+
+const studentMsg = (array, score) => {
+  let msg = `Class average: ${getAverage(array)}. Your grade: ${getGrade(score)}. `;
+
+  if (hasPassingGrade(score)) {
+    return msg + `You passed the course.`;
+  } 
+  return msg + `You failed the course.`;
+}
+
+console.log(studentMsg([92, 88, 12, 77, 57, 100, 67, 38, 97, 89], 37));
 
 ```
 
-## 2.
+A more compact version:
 
-index.html: 
+```js
+const getAverage = arr => arr.reduce((a, b) => a + b, 0) / arr.length;
 
-```html
+const getGrade = score =>
+  score === 100 ? "A+" :
+  score >= 90 ? "A" :
+  score >= 80 ? "B" :
+  score >= 70 ? "C" :
+  score >= 60 ? "D" : "F";
 
+const hasPassingGrade = score => getGrade(score) !== "F";
+
+const studentMsg = (arr, score) =>
+  `Class average: ${getAverage(arr)}. Your grade: ${getGrade(score)}. ` +
+  (hasPassingGrade(score) ? "You passed the course." : "You failed the course.");
+
+console.log(studentMsg([92, 88, 12, 77, 57, 100, 67, 38, 97, 89], 37));
 ```
 
-styles.css: 
+let inventory = [];
 
-```css
+const findProductIndex = productName => {
+  for (let i = 0; i < inventory.length; i++) {
+    if (inventory[i].name == productName) {
+      return i;
+    }
+  }
+  return -1;
+};
 
-```
+const addProduct = newProduct => {
+  const index = findProductIndex(newProduct.name.toLowerCase());
+
+  if (index == -1) {
+    inventory[index].name = newProduct.name.toLowerCase();
+    inventory[index].quantity = newProduct.quantity;
+    console.log("Added to inventory");
+  } else {
+    inventory[index].quantity += newProduct.quantity;
+    console.log("Quantity updated");
+  }
+};
+
+const removeProduct = (name, quantity) => {
+  const index = findProductIndex(name);
+  if (index == -1) {return `name not found`; };
+
+  const remaining = inventory[index].quantity - quantity;
+  if (remaining == 0) {
+    inventory[index].remove();
+    return;
+  } else if (remaining < 0) {
+    console.log(`Not enough ${name} available, remaining pieces: ${inventory[index].quantity}`)
+    return;
+  }
+
+  inventory[index].quantity = remaining;
+  console.log(`Remaining ${name} pieces: ${remaining}`);
+}
+
+
+// Prueba
+addProduct({ name: "piña", quantity: 1 });
+addProduct({ name: "piña", quantity: 3 });
+
+addProduct({name: "FLOUR", quantity: 5})
+console.log(inventory)
 
 
 </div>
