--- a/javaScript/7_fundamentals/4.md
+++ b/javaScript/7_fundamentals/4.md
@@ -139,11 +139,17 @@ const studentMsg = (arr, score) =>
 console.log(studentMsg([92, 88, 12, 77, 57, 100, 67, 38, 97, 89], 37));
 ```
 
+## 3. An Inventory Management
+
+script.js:
+
+```js
+// Suponiendo que este es tu código base ya definido antes de ejecutar los tests:
 let inventory = [];
 
 const findProductIndex = productName => {
   for (let i = 0; i < inventory.length; i++) {
-    if (inventory[i].name == productName) {
+    if (inventory[i].name === productName.toLowerCase()) {
       return i;
     }
   }
@@ -153,40 +159,141 @@ const findProductIndex = productName => {
 const addProduct = newProduct => {
   const index = findProductIndex(newProduct.name.toLowerCase());
 
-  if (index == -1) {
-    inventory[index].name = newProduct.name.toLowerCase();
-    inventory[index].quantity = newProduct.quantity;
-    console.log("Added to inventory");
+  if (index === -1) {
+    inventory.push({
+      name: newProduct.name.toLowerCase(),
+      quantity: newProduct.quantity,
+    });
+    console.log(`${inventory[inventory.length - 1].name} added to inventory`);
   } else {
     inventory[index].quantity += newProduct.quantity;
-    console.log("Quantity updated");
+    console.log(`${inventory[index].name} quantity updated`);
   }
 };
 
 const removeProduct = (name, quantity) => {
-  const index = findProductIndex(name);
-  if (index == -1) {return `name not found`; };
+  const productName = name.toLowerCase();
+  const index = findProductIndex(productName);
+
+  if (index === -1) {
+    console.log(`${productName} not found`);
+    return;
+  }
 
   const remaining = inventory[index].quantity - quantity;
-  if (remaining == 0) {
-    inventory[index].remove();
+
+  if (remaining === 0) {
+    inventory.splice(index, 1);
     return;
   } else if (remaining < 0) {
-    console.log(`Not enough ${name} available, remaining pieces: ${inventory[index].quantity}`)
+    console.log(
+      `Not enough ${productName} available, remaining pieces: ${inventory[index].quantity}`
+    );
     return;
   }
 
   inventory[index].quantity = remaining;
-  console.log(`Remaining ${name} pieces: ${remaining}`);
-}
+  console.log(`Remaining ${productName} pieces: ${remaining}`);
+};
 
+/////////////////////////////////////////////
+// 🔽 TESTS PASO A PASO CON SALIDA ESPERADA
+/////////////////////////////////////////////
 
-// Prueba
-addProduct({ name: "piña", quantity: 1 });
-addProduct({ name: "piña", quantity: 3 });
+console.log("\n--- TEST 1: Crear array vacío ---");
+console.log("inventory:", inventory); // []
 
-addProduct({name: "FLOUR", quantity: 5})
-console.log(inventory)
+console.log("\n--- TEST 2: Definición de findProductIndex ---");
+console.log(typeof findProductIndex); // function
 
+console.log("\n--- TEST 3: findProductIndex(\"flour\") después de agregarlo ---");
+addProduct({ name: "FLOUR", quantity: 5 }); // flour added to inventory
+console.log(findProductIndex("flour")); // 0
 
+console.log("\n--- TEST 4: findProductIndex(\"FloUr\") ---");
+console.log(findProductIndex("FloUr")); // 0
+
+console.log("\n--- TEST 5: findProductIndex(\"Flourish\") ---");
+console.log(findProductIndex("Flourish")); // -1
+
+console.log("\n--- TEST 6: Verificar addProduct ---");
+console.log(typeof addProduct); // function
+
+console.log("\n--- TEST 7-8: Agregar más FLOUR (actualiza cantidad) ---");
+addProduct({ name: "FLOUR", quantity: 5 }); // flour quantity updated
+console.log("Cantidad actual de flour:", inventory[0].quantity); // 10
+
+console.log("\n--- TEST 9-10: Agregar nuevo producto que no existe ---");
+addProduct({ name: "RICE", quantity: 3 }); // rice added to inventory
+console.log(inventory); // [{name: "flour", quantity: 10}, {name: "rice", quantity: 3}]
+
+console.log("\n--- TEST 11: Verificar removeProduct ---");
+console.log(typeof removeProduct); // function
+
+console.log("\n--- TEST 12: Intentar eliminar producto inexistente ---");
+removeProduct("BANANA", 2); // banana not found
+
+console.log("\n--- TEST 13-14: Eliminar 5 unidades de flour (queda 5) ---");
+removeProduct("FLOUR", 5); // Remaining flour pieces: 5
+console.log("Cantidad actual de flour:", inventory[0].quantity); // 5
+
+console.log("\n--- TEST 15: Eliminar todas las unidades de flour (queda eliminado) ---");
+removeProduct("FLOUR", 5); // sin mensaje, producto eliminado
+console.log("findProductIndex(\"flour\"):", findProductIndex("flour")); // -1
+
+console.log("\n--- TEST 16: Intentar eliminar más de lo que hay ---");
+addProduct({ name: "FLOUR", quantity: 5 });
+removeProduct("FLOUR", 10); // Not enough flour available, remaining pieces: 5
+```
+
+console:
+```none
+--- TEST 1: Crear array vacío ---
+inventory: []
+
+--- TEST 2: Definición de findProductIndex ---
+function
+
+--- TEST 3: findProductIndex("flour") después de agregarlo ---
+flour added to inventory
+0
+
+--- TEST 4: findProductIndex("FloUr") ---
+0
+
+--- TEST 5: findProductIndex("Flourish") ---
+-1
+
+--- TEST 6: Verificar addProduct ---
+function
+
+--- TEST 7-8: Agregar más FLOUR (actualiza cantidad) ---
+flour quantity updated
+Cantidad actual de flour: 10
+
+--- TEST 9-10: Agregar nuevo producto que no existe ---
+rice added to inventory
+[
+  { name: 'flour', quantity: 10 },
+  { name: 'rice', quantity: 3 }
+]
+
+--- TEST 11: Verificar removeProduct ---
+function
+
+--- TEST 12: Intentar eliminar producto inexistente ---
+banana not found
+
+--- TEST 13-14: Eliminar 5 unidades de flour (queda 5) ---
+Remaining flour pieces: 5
+Cantidad actual de flour: 5
+
+--- TEST 15: Eliminar todas las unidades de flour (queda eliminado) ---
+findProductIndex("flour"): -1
+
+--- TEST 16: Intentar eliminar más de lo que hay ---
+flour added to inventory
+Not enough flour available, remaining pieces: 5
+
+```
 </div>
