--- a/javaScript/7_fundamentals/4.md
+++ b/javaScript/7_fundamentals/4.md
@@ -296,4 +296,45 @@ flour added to inventory
 Not enough flour available, remaining pieces: 5
 
 ```
+
+## 4. A Password Generator
+
+script.js:
+```js
+const generatePassword = length => {
+  let password = [];
+  const chars = "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789!@#$%^&*()"
+  for (let i=0; i<length; i++) {
+    password.push(chars[Math.floor(Math.random() * chars.length)]);
+  }
+  return password.join("");
+}
+
+const password = generatePassword(5);
+console.log(`Generated password: ${password}`);
+```
+
+## 5. A Summ All Numbers Algorithm
+
+script.js
+```js
+// Versión legible
+const sumAll = array => {
+  
+  let ordered = []
+  array[0]<=array[1] ? ordered.push(array[0], array[1])
+                     : ordered.push(array[1], array[0])
+
+  let suma = 0;
+  for (let i=ordered[0]; i<=ordered[1]; i++) { suma += i; }
+
+  return suma;
+}
+
+// Versión más compacta
+const sumAll = arr => {
+  const [min, max] = arr[0] <= arr[1] ? arr : [arr[1], arr[0]];
+  return Array.from({length: max - min + 1}, (_, i) => i + min).reduce((a, b) => a + b, 0);
+};
+```
 </div>
