--- a/css/9_typography/2.md
+++ b/css/9_typography/2.md
@@ -7,13 +7,170 @@
 index.html: 
 
 ```html
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+  <meta charset="UTF-8">
+  <title>Nutrition Label</title>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,800" rel="stylesheet">
+  <link href="./styles.css" rel="stylesheet">
+</head>
+
+<body>
+  <div class="label">
+    <header>
+      <h1 class="bold">Nutrition Facts</h1>
+      <div class="divider"></div>
+      <p>8 servings per container</p>
+      <p class="bold">Serving size <span>2/3 cup (55g)</span></p>
+    </header>
+    <div class="divider large"></div>
+    <div class="calories-info">
+      <div class="left-container">
+        <h2 class="bold small-text">Amount per serving</h2>
+        <p>Calories</p>
+      </div>
+      <span>230</span>
+    </div>
+    <div class="divider medium"></div>
+    <div class="daily-value small-text">
+      <p class="bold right no-divider">% Daily Value *</p>
+      <div class="divider"></div>
+      <p><span><span class="bold">Total Fat</span> 8g</span> <span class="bold">10%</span></p>
+      <p class="indent no-divider">Saturated Fat 1g <span class="bold">5%</span></p>
+      <div class="divider"></div>
+      <p class="indent no-divider"><span><i>Trans</i> Fat 0g</span></p>
+      <div class="divider"></div>
+      <p><span><span class="bold">Cholesterol</span> 0mg</span> <span class="bold">0%</span></p>
+      <p><span><span class="bold">Sodium</span> 160mg</span> <span class="bold">7%</span></p>
+      <p><span><span class="bold">Total Carbohydrate</span> 37g</span> <span class="bold">13%</span></p>
+      <p class="indent no-divider">Dietary Fiber 4g</p>
+      <div class="divider"></div>
+      <p class="indent no-divider">Total Sugars 12g</p>
+      <div class="divider double-indent"></div>
+      <p class="double-indent no-divider">Includes 10g Added Sugars <span class="bold">20%</span></p>
+      <div class="divider"></div>
+      <p class="no-divider"><span><span class="bold">Protein</span> 3g</span></p>
+      <div class="divider large"></div>
+      <p>Vitamin D 2mcg <span>10%</span></p>
+      <p>Calcium 260mg <span>20%</span></p>
+      <p>Iron 8mg <span>45%</span></p>
+      <p class="no-divider">Potassium 235mg <span>6%</span></p>
+    </div>
+    <div class="divider medium"></div>
+    <p class="note">* The % Daily Value (DV) tells you how much a nutrient in a serving of food contributes to a daily
+      diet. 2,000 calories a day is used for general nutrition advice.</p>
+  </div>
+</body>
+</html>
 ```
 
 styles.css: 
 
 ```css
+* {
+  box-sizing: border-box;
+}
 
+html {
+  font-size: 16px;
+}
+
+body {
+  font-family: 'Open Sans', sans-serif;
+}
+
+.label {
+  border: 2px solid black;
+  width: 270px;
+  margin: 20px auto;
+  padding: 0 7px;
+}
+
+header h1 {
+  text-align: center;
+  margin: -4px 0;
+  letter-spacing: 0.15px
+}
+
+p {
+  margin: 0;
+  display: flex;
+  justify-content: space-between;
+}
+
+.divider {
+  border-bottom: 1px solid #888989;
+  margin: 2px 0;
+}
+
+.bold {
+  font-weight: 800;
+}
+
+.large {
+  height: 10px;
+}
+
+.large, .medium {
+  background-color: black;
+  border: 0;
+}
+
+.medium {
+  height: 5px;
+}
+
+.small-text {
+  font-size: 0.85rem;
+}
+
+
+.calories-info {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+
+.calories-info h2 {
+  margin: 0;
+}
+
+.left-container p {
+  margin: -5px -2px;
+  font-size: 2em;
+  font-weight: 700;
+}
+
+.calories-info span {
+  margin: -7px -2px;
+  font-size: 2.4em;
+  font-weight: 700;
+}
+
+.right {
+  justify-content: flex-end;
+}
+
+.indent {
+  margin-left: 1em;
+}
+
+.double-indent {
+  margin-left: 2em;
+}
+
+.daily-value p:not(.no-divider) {
+  border-bottom: 1px solid #888989;
+}
+
+.note {
+  font-size: 0.6rem;
+  margin: 5px 0;
+  padding: 0 8px;
+  text-indent: -8px;
+}
 ```
 
 ## 2. A Newspaper Article
@@ -21,13 +178,99 @@ styles.css:
 index.html: 
 
 ```html
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Newspaper Article</title>
+    <link href="styles.css" rel="stylesheet">
+  </head>
+  <body>
+    <div class="newspaper">
+      <div class="name">Daily Chuckles</div>
+      <div class="date">July 5, 2024</div>
+      <div class="headline">Breaking: Grandma Edna Saves Earth</div>
+      <div class="sub-headline">Alien Invasion Foiled by Tech-Savvy Grandma's Wi-Fi Password</div>
+      <div class="author">By Jane Doe</div>
+      <div class="text">In an extraordinary twist of fate, Grandma Edna found herself at the forefront of a potential crisis
+           when her clever Wi-Fi security measures unexpectedly thwarted an alien invasion. As alien spacecraft descended 
+           upon the town, panic spread until Grandma Edna calmly intervened, resetting her router with a cryptic passphrase
+           known only to her.</div>
+      <div class="text">The aliens, encountering unforeseen technological barriers, struggled to breach Grandma Edna's
+           fortified network. Frustrated and bewildered, they eventually retreated to reassess their invasion 
+           strategy, leaving residents both relieved and amazed at Grandma Edna's resourcefulness.</div>
+    </div>
+  </body>
+</html>
 ```
 
 styles.css: 
 
 ```css
+html {
+  font-size: 24px;
+  background-color: MintCream;
+  padding-top: 20px;
+}
 
+.newspaper {
+  font-family: 'Open Sans', sans-serif;
+  max-width: 800px;
+  margin: 20px auto;
+  padding: 20px;
+  background-color: white;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  font-size: 16px;
+}
+
+.name {
+  font-family: 'Times New Roman', serif;
+  font-size: 2rem;
+  text-transform: uppercase;
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+.date {
+  font-size: 1em;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.headline {
+  font-size: 2em;
+  font-weight: bold;
+  line-height: 1.2;
+  margin-bottom: 10px;
+}
+
+.sub-headline {
+  font-size: 1.5em;
+  font-style: italic;
+  font-weight: 100;
+  line-height: 1.4;
+  margin-bottom: 15px;
+}
+
+.author {
+  font-size: 1em;
+  text-transform: uppercase;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+.text {
+  text-indent: 20px;
+  font-size: 1em;
+  line-height: 2em;
+  margin-bottom: 15px;
+}
+
+.text::first-letter {
+  font-size: 2em;
+  font-weight: bold;
+}
 ```
 
 
