--- a/javaScript/7_fundamentals/4.md
+++ b/javaScript/7_fundamentals/4.md
@@ -337,4 +337,30 @@ const sumAll = arr => {
   return Array.from({length: max - min + 1}, (_, i) => i + min).reduce((a, b) => a + b, 0);
 };
 ```
+
+## 6. The Slice and Splice Algorithm
+
+script.js
+
+```js
+const frankenSplice = (arr1, arr2, index) => {
+  const result = [...arr2];
+  result.splice(index, 0, ...arr1);
+  return result;
+};
+
+// Casos de prueba
+console.log("1.", frankenSplice([1, 2, 3], [4, 5], 1)); 
+// → [4, 1, 2, 3, 5]
+
+console.log("2.", frankenSplice([1, 2], ["a", "b"], 1)); 
+// → ["a", 1, 2, "b"]
+
+console.log("3.", frankenSplice(["claw", "tentacle"], ["head", "shoulders", "knees", "toes"], 2)); 
+// → ["head", "shoulders", "claw", "tentacle", "knees", "toes"]
+
+console.log("4.", frankenSplice([1, 2, 3, 4], [], 0)); 
+// → [1, 2, 3, 4]
+
+```
 </div>
