--- a/javaScript/9_DOM_manipulation/4.md
+++ b/javaScript/9_DOM_manipulation/4.md
@@ -337,18 +337,100 @@ selectContainer.addEventListener("change", () => {
 });
 ```
 
-## 4. A Real Time Counter
+## 4. A Real Time Character Counter
 
 index.html: 
 
 ```html
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Real Time Counter</title>
+    <link href="styles.css" rel="stylesheet">
+    <script src="script.js"></script>
+</head>
+
+<body>
+    <div class="container">
+        <h1>Real-Time Character Counter</h1>
+        <textarea id="text-input" placeholder="Type something..."></textarea>
+        <p id="char-count">Character Count: 0/50</p>
+    </div>
+</body>
+
+</html>
 ```
 
 styles.css: 
 
 ```css
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    font-family: Arial, sans-serif;
+    background-color: #c0c1ec;
+    margin: 0;
+}
 
+h1{
+    background-color: #f2f48b;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+.container {
+    text-align: center;
+}
+
+textarea {
+    width: 300px;
+    height: 100px;
+    font-size: 18px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    resize: none;
+    display: block;
+    margin: 0 auto;
+    border: 1px solid slategray;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+textarea:focus {
+    outline: none;
+    border-color: #f2f48b;
+}
+
+#char-count {
+    margin-top: 10px;
+    font-size: 18px;
+    color: darkslategray;
+    font-weight: bold;
+}
+```
+
+script.js:
+
+```js
+document.addEventListener("DOMContentLoaded", function () {
+  const textarea = document.getElementById("text-input");
+  const p = document.getElementById("char-count");
+
+  textarea.addEventListener("input", () => {
+    if(textarea.value.length >= 50) {
+      p.style.color = "red";
+      p.textContent = `Character Count: ${textarea.value.length}/50`;
+      textarea.value = textarea.value.substring(0, 50);
+      return;
+    }
+    p.style.color = "black";
+    p.textContent = `Character Count: ${textarea.value.length}/50`;
+  });
+});
 ```
 
 ## 5. A Lightbox Viewer
@@ -356,13 +438,135 @@ styles.css:
 index.html: 
 
 ```html
+<!DOCTYPE html>
+<html lang="en">
 
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lightbox Viewer</title>
+    <link href="styles.css" rel="stylesheet">
+    <script src="script.js"></script>
+  </head>
+
+  <body>
+    <h1 class="title">Museum Gallery</h1>
+    <div class="gallery">
+      <img class="gallery-item" src="https://cdn.freecodecamp.org/curriculum/labs/stonehenge-thumbnail.jpg">
+      <img class="gallery-item" src="https://cdn.freecodecamp.org/curriculum/labs/storm-thumbnail.jpg">
+      <img class="gallery-item" src="https://cdn.freecodecamp.org/curriculum/labs/trees-thumbnail.jpg">
+    </div>
+
+    <div class="lightbox">
+      <button id="close-btn">&times;<button>
+      <img id="lightbox-image" src = "https://cdn.freecodecamp.org/curriculum/labs/stonehenge.jpg">
+    </div>
+  </body>
+
+</html>
 ```
 
 styles.css: 
 
 ```css
+body {
+  margin: 0;
+  padding: 0;
+  background-color: #f0f0f0;
+  color: #333;
+}
 
+.title {
+  margin-top: 100px;
+  text-align: center;
+  background-color: rgb(211, 221, 224);  
+}
+
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  justify-content: center;
+  padding: 20px;
+}
+
+.gallery-item {
+  width: 250px;
+  height: 300px;
+  object-fit: cover;
+  cursor: pointer;
+  transition: transform 0.2s;
+}
+
+.gallery-item:hover {
+  transform: scale(1.05);
+}
+
+.lightbox {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.lightbox img {
+  max-width: 90%;
+  max-height: 90%;
+}
+
+#close-btn {
+  position: absolute;
+  top: 20px;
+  right: 10px;
+  font-size: 2em;
+  color: white;
+  cursor: pointer;
+  border: none;
+  background-color: transparent;
+}
+```
+
+script.js:
+
+```js
+document.addEventListener("DOMContentLoaded", function () {
+  const lightbox = document.getElementById("lightbox");
+  const lightboxImage = document.getElementById("lightbox-image");
+
+  function openLightbox(src) {
+    lightboxImage.src = src;
+    lightbox.style.display = "flex";
+  }
+  function closeLightbox() {
+    lightbox.style.display = "none";
+  }
+
+  const closeButton = document.getElementById("close-btn");
+  if(closeButton) {
+    closeButton.addEventListener("click", closeLightbox);
+    lightbox.addEventListener("click", (e) => {
+      if (e.target === lightbox) {
+        closeLightbox();
+      }
+    });
+  }
+
+  const galleryItems = document.querySelectorAll(".gallery-item");
+
+  galleryItems.forEach(item => {
+    item.addEventListener("click", () => {
+      console.log("item.src")
+      console.log(item.src)
+      openLightbox(item.src.replace("-thumbnail", ""));
+    });
+  });
+});
 ```
 
 ## 6. A Rock, Paper, Scissors Game
