--- a/javaScript/10_debugging/2.md
+++ b/javaScript/10_debugging/2.md
@@ -2,27 +2,7 @@
 
 # Examples
 
-## 1.
-
-index.html: 
-
-```html
-
-```
-
-styles.css: 
-
-```css
-
-```
-
-script.js:
-
-```js
-
-```
-
-## 2.
+## 1. Debug a Random Background Color Changer
 
 index.html: 
 
