--- a/javaScript/9_DOM_manipulation/4.md
+++ b/javaScript/9_DOM_manipulation/4.md
@@ -574,13 +574,249 @@ document.addEventListener("DOMContentLoaded", function () {
 index.html: 
 
 ```html
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Rock, Paper, Scissors game</title>
+    <link rel="stylesheet" href="./styles.css" />
+  </head>
+  <body>
+    <h1>Let's play Rock, Paper, Scissors!</h1>
+    <main>
+      <details class="rules-container">
+        <summary>Rules to the game</summary>
+
+        <p>You will be playing against the computer.</p>
+        <p>You can choose between Rock, Paper, and Scissors.</p>
+        <p>The first one to three points wins.</p>
+
+        <p>Here are the rules to getting a point in the game:</p>
+        <ul>
+          <li>Rock beats Scissors</li>
+          <li>Scissors beats Paper</li>
+          <li>Paper beats Rock</li>
+        </ul>
+        <p>
+          If the player and computer choose the same option (Ex. Paper and
+          Paper), then no one gets the point.
+        </p>
+      </details>
+
+      <div class="score-container">
+        <strong
+          >Player Score: <span class="score" id="player-score">0</span></strong
+        >
+        <strong
+          >Computer Score:
+          <span class="score" id="computer-score">0</span></strong
+        >
+      </div>
+
+      <section class="options-container">
+        <h2>Choose an option:</h2>
+        <div class="btn-container">
+          <button id="rock-btn" class="btn">Rock</button>
+          <button id="paper-btn" class="btn">Paper</button>
+          <button id="scissors-btn" class="btn">Scissors</button>
+        </div>
+      </section>
+
+      <div class="results-container">
+        <p id="results-msg"></p>
+        <p id="winner-msg"></p>
+        <button class="btn" id="reset-game-btn">Play again?</button>
+      </div>
+    </main>
+    <script src="./script.js"></script>
+  </body>
+</html>
 
 ```
 
 styles.css: 
 
 ```css
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
+:root {
+  --very-dark-blue: #0a0a23;
+  --white: #ffffff;
+  --yellow: #f1be32;
+  --golden-yellow: #feac32;
+}
+
+body {
+  background-color: var(--very-dark-blue);
+  text-align: center;
+  color: var(--white);
+}
+
+h1 {
+  margin: 15px 0 20px;
+}
+
+.btn {
+  cursor: pointer;
+  width: 100px;
+  margin: 10px;
+  color: var(--very-dark-blue);
+  background-color: var(--golden-yellow);
+  background-image: linear-gradient(#fecc4c, #ffac33);
+  border-color: var(--golden-yellow);
+  border-width: 3px;
+}
+
+.btn:hover {
+  background-image: linear-gradient(#ffcc4c, #f89808);
+}
+
+.rules-container {
+  padding: 10px 0;
+  margin: auto;
+  border-radius: 15px;
+  border: 5px solid var(--yellow);
+  background-color: var(--white);
+  color: var(--very-dark-blue);
+}
+
+.rules-container ul {
+  list-style-type: none;
+}
+
+.rules-container p {
+  margin: 10px 0;
+}
+
+@media (min-width: 760px) {
+  .rules-container {
+    width: 60%;
+  }
+}
+
+.score-container {
+  display: flex;
+  justify-content: space-around;
+  margin: 30px 0;
+  font-size: 1.2rem;
+}
+
+.score {
+  font-weight: 500;
+}
+
+.results-container {
+  font-size: 1.3rem;
+  margin: 15px 0;
+}
+
+#winner-msg {
+  margin-top: 25px;
+}
+
+#reset-game-btn {
+  display: none;
+  margin: 20px auto;
+}
+
+```
+
+script.js:
+
+```js
+const options = ["Rock", "Paper", "Scissors"];
+
+const getRandomComputerResult = () => options[Math.floor(Math.random() * options.length)] 
+
+const hasPlayerWonTheRound = (player, computer) => {
+  let hasIt = false;
+  switch (player) {
+    case "Rock":
+      hasIt = computer === "Scissors";
+      break;
+    case "Scissors":
+      hasIt = computer === "Paper";
+      break;
+    case "Paper":
+      hasIt = computer === "Rock";
+      break;
+  }
+
+  return hasIt;
+}
+
+let playerScore = 0;
+let computerScore = 0;
+
+function getRoundResults(userOption) {
+  const computerResult = getRandomComputerResult();
+  let message;
+  
+  if (hasPlayerWonTheRound(userOption, computerResult)) {
+    playerScore +=1;
+    message = `Player wins! ${userOption} beats ${computerResult}`;
+  } else if (userOption == computerResult) { 
+    message = `It's a tie! Both chose ${userOption}`;
+  } else {
+    computerScore +=1;
+    message = `Computer wins! ${computerResult} beats ${userOption}`;
+  }
+
+  return message;
+}
+
+const playerScoreSpanElement = document.getElementById("player-score");
+const computerScoreSpanElement = document.getElementById("computer-score");
+const roundResultsMsg = document.getElementById("results-msg");
+
+const winnerMsgElement = document.getElementById("winner-msg");
+const optionsContainer = document.querySelector(".options-container");
+const resetGameBtn = document.getElementById("reset-game-btn");
+
+const showResults = userOption => {
+  roundResultsMsg.textContent = getRoundResults(userOption);
+  playerScoreSpanElement.textContent = playerScore;
+  computerScoreSpanElement.textContent = computerScore;
+
+  if (playerScore === 3) {
+    winnerMsgElement.textContent = "Player has won the game!";
+    resetGameBtn.style.display = "block";
+    optionsContainer.style.display = "none";
+  } else if (computerScore === 3) {
+    winnerMsgElement.textContent = "Computer has won the game!";
+    resetGameBtn.style.display = "block";
+    optionsContainer.style.display = "none";
+  }
+}
+
+const resetGame = () => {
+  playerScore = 0;
+  computerScore = 0;
+  playerScoreSpanElement.textContent = '0';
+  computerScoreSpanElement.textContent = '0';
+  resetGameBtn.style.display = "none";
+  optionsContainer.style.display = "flex";
+  winnerMsgElement.textContent = '';
+  roundResultsMsg.textContent = '';
+}
+
+resetGameBtn.addEventListener("click", resetGame);
+
+const rockBtn = document.getElementById("rock-btn");
+const paperBtn = document.getElementById("paper-btn");
+const scissorsBtn = document.getElementById("scissors-btn");
+rockBtn.addEventListener("click", () => showResults("Rock") );
+paperBtn.addEventListener("click", () => showResults("Paper") );
+scissorsBtn.addEventListener("click", () => showResults("Scissors") );
+
+resetGameBtn.addEventListener("click", () => resetGame());
 ```
 
 ## 7. A Set of Football Team Cards
@@ -594,6 +830,12 @@ index.html:
 styles.css: 
 
 ```css
+
+```
+
+script.js:
+
+```js
 
 ```
 
